[package]
name = "astra-db-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
cdrs-tokio = { version = "9.0.2", features = ["derive", "rust-tls"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
num-bigint = "0.4"
rustls-pemfile = "2.2"
tempfile = "3.14"
tokio-rustls = "0.26"
uuid = "1.0"
zip = "2.2"
